--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,9 +28,9 @@
 
         <Button
             android:id="@+id/btn_pause"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_weight="1"
+            android:layout_width="250dp"
+            android:layout_height="70dp"
+            android:layout_weight="0.7"
             android:background="@drawable/pause"
             android:onClick="funcPause"
             android:padding="100dp"
