--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -40,7 +40,9 @@
                     android:id="@+id/characterName"
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    android:layout_weight="0.3"
+                    android:layout_weight="0.2"
+                    android:fontFamily="monospace"
+                    android:gravity="center|top"
                     android:text="TextView"
                     android:textAlignment="inherit"
                     android:textColor="#000000"
@@ -50,9 +52,11 @@
                     android:id="@+id/characterDescription"
                     android:layout_width="match_parent"
                     android:layout_height="61dp"
-                    android:layout_weight="0.7"
-                    android:text="TextView"
                     android:layout_marginBottom="5dp"
+                    android:layout_weight="0.8"
+                    android:fontFamily="serif"
+                    android:gravity="center|top"
+                    android:text="TextView"
                     android:textAlignment="viewStart"
                     android:textColor="#000000"
                     android:textSize="13sp" />
