--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:orientation="horizontal">
 
         <TextView
@@ -20,16 +20,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.2"
-            android:gravity="center|center_horizontal|center_vertical"
+            android:gravity="center"
             android:padding="20dp"
-            android:text="SpongeBob's characters "
-            android:textSize="20sp"
+            android:text="SpongeBob's Characters"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/btn_pause"
-            android:layout_width="250dp"
-            android:layout_height="70dp"
+            android:layout_width="215dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
             android:layout_weight="0.7"
             android:background="@drawable/pause"
             android:onClick="funcPause"
