--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -14,7 +14,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="225dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
@@ -26,35 +26,39 @@
             <ImageView
                 android:id="@+id/characterImage"
                 android:layout_width="match_parent"
-                android:layout_height="225dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_weight="1"
+                android:padding="5dp"
                 android:src="@drawable/cupcake" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="10dp">
 
                 <TextView
                     android:id="@+id/characterName"
                     android:layout_width="match_parent"
-                    android:layout_height="2dp"
-                    android:layout_weight="0.2"
-                    android:fontFamily="monospace"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/gabriela"
                     android:gravity="center|top"
                     android:text="TextView"
                     android:textAlignment="inherit"
                     android:textColor="#000000"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/characterDescription"
                     android:layout_width="match_parent"
-                    android:layout_height="61dp"
+                    android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
-                    android:layout_weight="0.8"
-                    android:fontFamily="serif"
+                    android:layout_weight="0.2"
+                    android:fontFamily="@font/gabriela"
                     android:gravity="center|top"
                     android:text="TextView"
                     android:textAlignment="viewStart"
