--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -8,13 +8,13 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="#F4F1D1"
         app:cardBackgroundColor="#F4F1D1">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="225dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
@@ -26,7 +26,7 @@
             <ImageView
                 android:id="@+id/characterImage"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="225dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:padding="5dp"
@@ -34,16 +34,15 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.9"
                 android:orientation="vertical"
                 android:padding="10dp">
 
                 <TextView
                     android:id="@+id/characterName"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_height="30dp"
                     android:fontFamily="@font/gabriela"
                     android:gravity="center|top"
                     android:text="TextView"
@@ -55,9 +54,8 @@
                 <TextView
                     android:id="@+id/characterDescription"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="5dp"
-                    android:layout_weight="0.2"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|top"
                     android:fontFamily="@font/gabriela"
                     android:gravity="center|top"
                     android:text="TextView"
