--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="snackbarBackgroundColor">#304FFE</color> <!-- Example: Indigo -->
+    <color name="snackbarTextColor">#FFFFFF</color> <!-- Example: White -->
+    <color name="snackbarActionTextColor">#FFD600</color> <!-- Example: Yellow -->
 </resources>
